<resources>
    <!-- facebook,twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="facebook_app_id" translatable="false">593299544466815</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb593299544466815</string>

    <string name="app_name">workout4everyone</string>
    <string name="view_all_workouts">view all workouts</string>
    <string name="create_workout">create workout</string>
    <string name="view_favorite_workouts">View favorite</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Title">Title</string>
    <string name="Exercise">Exercise</string>
    <string name="Description">Description</string>
    <string name="addExercise">Add Exercise</string>
    <string name="viewEx">View Exercise</string>
    <string name="save">Save</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="SignIn">Sign in</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>

    <!-- Login -->
    <string name="RemoveEx">remove exercise</string>
    <string name="workoutImage">picture</string>
    <string name="register">register</string>
    <string name="email">E-mail</string>
    <string name="policyCouldntLoad">Policy couldn\'t load, please try again!</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="workoutTitle">workout title</string>
    <string name="exerciseTitle">exercise title</string>
    <string name="exerciseDesc">exercise description</string>
    <string name="viewWorkouts">View Workouts</string>
    <string name="CreateWorkout">Create Workout</string>
    <string name="ViewFavourites">View Favourites</string>
    <string name="navdraweropen">navigation drawer open</string>
    <string name="navdrawerclose">navigation drawer close</string>
    <string name="signOut">Sign out</string>
    <string name="profile">Profile</string>
    <string name="myWorkouts">My workouts</string>
    <string name="selectAction">Select action</string>
    <string name="select_photo_from_gallery">select photo from gallery</string>
    <string name="capture_photo_from_camera">capture photo from camera</string>
    <string name="access_the_camera">Allow workout4everyone to access the camera</string>
    <string name="Add_Exercise">Add Exercise</string>
    <string name="Input_both_Exercise_and_Description">Input both exercise and description</string>
    <string name="please_make_sure_that_you_have_a_title_and_image">please make sure that you have a title and image</string>
    <string name="Enter_email_please">Enter email please</string>
    <string name="Enter_a_username_please">Enter a username please</string>
    <string name="Enter_a_password_please">Enter a password please</string>
    <string name="Repeat_password_please">Repeat password please</string>
    <string name="Password_must_match">Password must match</string>
    <string name="Success_creating_account">Succeeded creating account</string>
    <string name="succeeded_signing_in">Succeeded signing in</string>
    <string name="check_email_and_password">failed to sign in, please check that email and password is correct</string>
    <string name="Exersice_deleted">Exercise deleted</string>
    <string name="Workout_deleted">Workout deleted</string>
    <string name="Repeat_password">repeat password</string>
    <string name="Registering_user">Registering user</string>
</resources>


