<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:src="@drawable/ic_camera" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:src="@drawable/ic_gallery" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/workoutImage"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            app:srcCompat="@drawable/grey_color" />

        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:text="@string/Title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_rounded_borders"
                android:hint="@string/workoutTitle"
                android:paddingLeft="10dp"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ExerciseLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:text="@string/Exercise"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/exerciseInput"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_rounded_borders"
                android:hint="@string/exerciseTitle"
                android:paddingLeft="10dp"
                android:singleLine="true" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/DescriptionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:text="@string/Description"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/descInput"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_rounded_borders"
                android:hint="@string/exerciseDesc"
                android:paddingLeft="10dp"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_weight="1"
                android:onClick="addButtonClicked"
                android:text="@string/addExercise"
                android:textColor="@color/red"
                android:layout_margin="@dimen/fab_homeButtonsMargin"/>

            <Button
                android:id="@+id/goToExerciseActivity"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_weight="1"
                android:onClick="viewCurrentListButtonClicked"
                android:text="@string/viewEx"
                android:textColor="@color/red"
                android:layout_margin="@dimen/fab_homeButtonsMargin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_workout_activity_difficultyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/green"
                android:text="@string/easy"
                android:onClick="swapDifficultyButtonClicked"/>

            <Button
                android:id="@+id/saveWorkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/save"
                android:textColor="@color/red"
                android:layout_margin="@dimen/fab_homeButtonsMargin"
                android:onClick="saveButtonClicked"/>
            <ProgressBar
                android:id="@+id/saveProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
