<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >


    <Button
        android:id="@+id/view_all_workouts"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_homeButtonsMargin"
        android:layout_centerInParent="true"
        android:layout_above="@+id/create_workout"
        android:layout_weight="0"
        android:text="@string/view_all_workouts" />

    <Button
        android:id="@+id/create_workout"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_homeButtonsMargin"
        android:layout_centerInParent="true"
        android:layout_above="@+id/favorite_workouts"
        android:layout_weight="0"
        android:text="@string/create_workout" />

    <Button
        android:id="@+id/favorite_workouts"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_homeButtonsMargin"

        android:layout_centerInParent="true"
        android:layout_weight="0"
        android:text="@string/view_favorite_workouts" />

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navbar"
        android:background="?android:attr/windowBackground">
    </android.support.design.widget.BottomNavigationView>

</RelativeLayout>

