<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context = ".homeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <!-- view all button -->
                <Button
                    android:id="@+id/home_activity_viewAllWorkoutsButton"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_homeButtonsMargin"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:background="@drawable/btnshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:gravity="center"
                    android:text="@string/view_all_workouts"
                    />

                <!-- create workout button -->
                <Button
                    android:id="@+id/home_activity_createWorkoutButton"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_homeButtonsMargin"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:background="@drawable/btnshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:gravity="center"
                    android:text="@string/create_workout"
                    />


                <!-- favorite workout button -->
                <Button
                    android:id="@+id/home_activity_favoriteWorkoutsButton"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_homeButtonsMargin"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:background="@drawable/btnshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:gravity="center"
                    android:text="@string/view_favorite_workouts"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</FrameLayout>
